--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html, body {
   height: 100%;
   width: 100%;
   font-family: 'Poppins', sans-serif;
-  color: #222;
+  color: rgb(0, 12, 39);
 }
 .navbar {
   padding: .8rem;
@@ -49,18 +49,6 @@ html, body {
   font-weight: 500;
   text-shadow: 1px 1px 10px #000;
   padding-bottom: 1rem;
-}
-.btn-primary{
-  background-color: #6648b1;
-  border: 1px solid #563d7c;
-}
-.btn-primary:hover{
-  background-color: #563d7c;
-  border: 1px solid #6648b1;
-}
-.jumbotron{
-  padding: 1rem;
-  border-radius: 0;
 }
 .padding{
   padding-bottom: 2rem;
@@ -173,7 +161,7 @@ footer a {
   .carousel-caption{
     top: 40%;
   }
-  .carousel-caption h1{
+  .carousel-caption h2{
     font-size: 250%;
   }
   .carousel-caption h3{
@@ -182,9 +170,6 @@ footer a {
   .carousel-caption .btn{
     font-size: 90%;
     padding: 8px 14px;
-  }
-  .carousel-indicators{
-    display: none;
   }
   .display-4{
     font-size: 160%;
