--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ footer a {
 figure {
   position: relative;
   width: 100%;
-  height: 60%;
+  height: 100%;
   margin: 0!important;
 }
 .fixed-wrap {
@@ -208,7 +208,6 @@ figure {
   height: 100%;
 }
 #fixed {
- /* background-image: url('img/mac.jpg'); */
   position: fixed;
   display: block;
   top: 0;
@@ -222,6 +221,9 @@ figure {
   will-change: transform;
 }
 
+.root{
+  height: 100%;
+}
 /*--- Bootstrap Padding Fix --*/
 [class*="col-"] {
     padding: 1rem;
