--- a/style.css
+++ b/style.css
@@ -2,29 +2,22 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
+:root{
+  --purple: #7B68EE, /* "#483D8B", "#8A2BE2"*/
+}
 html, body {
   height: 100%;
   width: 100%;
-  font-family: 'Poppins', sans-serif;
-  color: rgb(0, 12, 39);
+  font-family: 'Libre Baskerville', serif;
+  color: #483D8B; /* rgb(0, 12, 39);*/
 }
-
-#first-bg,#second-bg,#kZielonka{
-  animation: firstBg 3s ease;
-}
-@keyframes firstBg {
-  from{
-    opacity: 0;
-    transform: scale(0.2);
-    transform-origin: center;
-  }
-  to{
-    opacity: 1;
-    transform: scale(1);
-  }
+.display-3{
+  text-shadow: 1px 1px 10px rgba(150, 150, 150, 1);
 }
 #logo{
-  font-family: 'Sacramento', cursive;
+  font-family: 'Libre Baskerville', serif;
+  color: #483D8B;
 }
 #logo::after {
   content: "|";
@@ -44,6 +37,7 @@ html, body {
 }
 .nav-link{
   font-size: 1.1em !important;
+  color: #483D8B !important;
 }
 .carousel-item img{
   width: 100%;
@@ -103,9 +97,6 @@ html, body {
 .fa-instagram{
   color: #8451a4;
 }
-.fa-google-plus-g{
-  color: #dd4b39;
-}
 .fa-youtube{
   color: #bb0000;
 }
@@ -118,13 +109,11 @@ html, body {
 .fa-github{
   color: #000;
 }
-.fa-facebook:hover,.fa-instagram:hover,.fa-github:hover,.fa-youtube:hover{
+.fa-facebook:hover,.fa-instagram:hover,.fa-github:hover,.fa-youtube:hover, .fa-linkedin:hover{
   color: #ed75af;
 }
 
 footer{
-  background-color: #3f3f3f;
-  color: #d5d5d5;
   padding: 2rem;
 }
 hr.light{
@@ -133,10 +122,6 @@ hr.light{
   margin-top: .8rem;
   margin-bottom: 1rem;
 }
-footer a {
-  color: #d5d5d5;
-}
-
 /*---Media Queries --*/
 @media (max-width: 992px) {
   .social a{
