--- a/style.css
+++ b/style.css
@@ -12,10 +12,8 @@ html, body {
   font-family: 'Libre Baskerville', serif;
   color: #483D8B; /* rgb(0, 12, 39);*/
 }
-.display-3{
-  text-shadow: 1px 1px 10px rgba(150, 150, 150, 1);
-}
 #logo{
+  font-size: 2rem;
   font-family: 'Libre Baskerville', serif;
   color: #483D8B;
 }
@@ -28,7 +26,10 @@ html, body {
   0%, 100% {opacity: 1;}
   50% {opacity: 0;}
 }
-
+.fa-bars{
+  color:#483D8B; 
+  font-size:2rem;
+}
 .navbar {
   padding: .8rem;
 }
@@ -47,6 +48,7 @@ html, body {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+  text-shadow: 1px 1px 10px rgba(150, 150, 150, 1);
 }
 .carousel-caption h1{
   font-size: 500%;
@@ -141,7 +143,7 @@ hr.light{
     font-size: 350%;
   }
   .carousel-caption h3{
-    font-size: 140%;
+    font-size: 120%;
     font-weight: 400;
     padding-bottom: .2rem;
   }
@@ -168,7 +170,7 @@ hr.light{
     font-size: 250%;
   }
   .carousel-caption h3{
-    font-size: 110%;
+    font-size: 100%;
   }
   .carousel-caption .btn{
     font-size: 90%;
@@ -195,7 +197,7 @@ hr.light{
 figure {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 60%;
   margin: 0!important;
 }
 .fixed-wrap {
